Fix menu alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,7 @@ header {
       display: flex;
       justify-content: center;
       gap: 1rem;
+      padding-left: 0;
     }
 
     & li {
